--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ input {
 .page-layout {
   overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: 1fr 1fr;
   gap: 0px;
   grid-template-rows: min-content;
   align-items: start;
@@ -133,6 +133,10 @@ input {
   padding: 0;
 }
 .navbar {
+  grid-row: 1;
+  grid-column: 1 / span 2 !important;
+  display: flex;
+  justify-content: space-around;
   margin-top: 10px;
   padding: 0;
   margin-left: 20px;
@@ -142,16 +146,6 @@ input {
 }
 .logotype {
   margin-left: 0px;
-}
-
-.name-container {
-  grid-area: 2/1;
-  margin: 0px;
-  height: fit-content;
-  margin-left: 90px;
-  padding: 0;
-  display: flex;
-  justify-content: center;
 }
 
 .logo-text {
@@ -427,12 +421,6 @@ select {
   background-color: none;
   padding: 0;
 }
-.cartlag-wrapper {
-  grid-area: 3/1;
-  position: relative;
-  width: fit-content;
-  margin: 0 auto;
-}
 
 .list-data:hover {
   cursor: pointer;
@@ -598,14 +586,25 @@ small {
   font-size: 1.3rem;
 }
 .new-category-section {
-  position: absolute;
-  top: 260px !important;
-  left: 30px !important;
-  right: 0px !important;
-  z-index: 999;
-  height: fit-content;
-  pointer-events: none;
+  grid-area: 2/1;
+  justify-content: flex-end;
+  align-self: flex-end;
+  justify-self: flex-end;
+  margin-right: 90px;
+  margin-bottom: 60px;
+  padding-left: 20px;
 }
+.cartlag-wrapper {
+  grid-row: 2;
+  grid-column: 1 / span 2;
+  position: relative;
+  width: fit-content;
+  margin: 0 auto;
+  align-self: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
 .new-category-section * {
   pointer-events: auto;
 }
@@ -714,10 +713,16 @@ select {
   color: #edeae4;
   text-align: center;
 }
-.hello-name {
-  margin-top: -35px;
+.name-container {
+  margin: 0px;
+  margin-left: 0px;
+  padding: 0;
   display: flex;
+}
+.hello-name {
   font-size: 1.5rem;
+  align-self: flex-end;
+  margin-right: 50px;
 }
 .hello {
   margin-right: 5px;
@@ -1192,7 +1197,7 @@ h2 {
   transform: scale(1.5);
   background: none;
 }
-.settings-button {
+/* .settings-button {
   margin-bottom: 0;
   padding: 0;
   margin-left: 0px;
@@ -1206,7 +1211,7 @@ h2 {
   right: 20px;
   grid-row: 1;
   color: #edeae4;
-}
+} */
 .settings-button:hover {
   cursor: pointer;
   transform: scale(1.1);
@@ -1308,6 +1313,9 @@ h2 {
   height: 50px;
   margin-left: 10px;
 }
+.settings-btn {
+  align-self: flex-end;
+}
 .modal-content-summary {
   padding-top: 25px;
   grid-column: 2;
@@ -1387,19 +1395,25 @@ h2 {
     justify-content: center;
     align-items: center;
   }
-  .page-layout {
+  /* .page-layout {
     overflow: hidden;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 0px;
     grid-template-rows: min-content;
+    gap: 0px;
     align-items: start;
     margin: 0;
     padding: 0;
-  }
+  } */
+
   .navbar {
+    grid-row: 1;
+    grid-column: 1 / span 2 !important;
+    display: flex;
+    justify-content: space-around;
     margin-top: 10px;
     padding: 0;
+    margin-left: 20px;
   }
   .logo {
     height: 80px;
@@ -1416,15 +1430,6 @@ h2 {
     position: absolute;
     top: 20px;
     right: 20px;
-  }
-  .name-container {
-    grid-area: 2/1;
-    margin: 0px;
-    height: fit-content;
-    margin-left: 90px;
-    padding: 0;
-    display: flex;
-    justify-content: center;
   }
 
   .logo-text {
@@ -1498,7 +1503,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 280px;
+    width: 320px;
 
     position: relative;
     z-index: 1;
@@ -1856,14 +1861,22 @@ h2 {
     font-size: 1.3rem;
   }
   .new-category-section {
-    position: absolute;
-    top: 250px !important;
-
-    right: 10px !important;
-    left: 350px !important;
-    z-index: 999;
-    height: fit-content;
-    pointer-events: none;
+    grid-area: 2/1;
+    justify-content: flex-end;
+    align-self: flex-end;
+    justify-self: flex-end;
+    margin-right: 150px;
+    margin-bottom: 60px;
+  }
+  .cartlag-wrapper {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    position: relative;
+    width: fit-content;
+    margin: 0 auto;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
   .new-category-section * {
     pointer-events: auto;
@@ -1969,13 +1982,10 @@ h2 {
     text-align: center;
   }
   .hello-name {
-    margin-top: -50px;
-    display: flex;
     font-size: 1.8rem;
+    margin-right: 150px;
   }
-  .hello {
-    margin-right: 15px;
-  }
+
   h2 {
     margin: 0;
     padding: 0;
@@ -2507,7 +2517,7 @@ h2 {
     justify-content: flex-end;
     align-items: center;
   }
-  .page-layout {
+  /* .page-layout {
     overflow: hidden;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -2516,10 +2526,15 @@ h2 {
     align-items: start;
     margin: 0;
     padding: 0;
-  }
+  } */
   .navbar {
+    grid-row: 1;
+    grid-column: 1 / span 2 !important;
+    display: flex;
+    justify-content: space-around;
     margin-top: 10px;
     padding: 0;
+    margin-left: 20px;
   }
   .logo {
     height: 90px;
@@ -2528,7 +2543,7 @@ h2 {
     margin-left: 120px;
     margin-top: 0px;
   }
-  .settings-button {
+  /* .settings-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -2536,16 +2551,7 @@ h2 {
     position: absolute;
     top: 20px;
     right: 120px;
-  }
-  .name-container {
-    grid-area: 2/1;
-    margin: 0px;
-    height: fit-content;
-    margin-left: 90px;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-  }
+  } */
 
   .logo-text {
     font-size: 1rem;
@@ -2620,7 +2626,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 300px;
+    width: 450px;
 
     position: relative;
     z-index: 1;
@@ -2792,12 +2798,6 @@ h2 {
 
     padding: 0;
   }
-  .cartlag-wrapper {
-    grid-area: 3/1;
-    position: relative;
-    width: fit-content;
-    margin: 0 auto;
-  }
 
   .list-data:hover {
     cursor: pointer;
@@ -2962,14 +2962,22 @@ h2 {
     font-size: 1.3rem;
   }
   .new-category-section {
-    position: absolute;
-    top: 300px !important;
-    padding-left: 0;
-    right: 100px !important;
-    left: 500px !important;
-    z-index: 99;
-    height: fit-content;
-    pointer-events: none;
+    grid-area: 2/1;
+    justify-content: flex-end;
+    align-self: flex-end;
+    justify-self: flex-end;
+    margin-right: 250px;
+    margin-bottom: 60px;
+  }
+  .cartlag-wrapper {
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    position: relative;
+    width: fit-content;
+    margin: 0 auto;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
   .new-category-section * {
     pointer-events: auto;
@@ -3078,13 +3086,10 @@ h2 {
     text-align: center;
   }
   .hello-name {
-    margin-top: -60px;
-    display: flex;
     font-size: 2.4rem;
+    margin-right: 150px;
   }
-  .hello {
-    margin-right: 15px;
-  }
+
   h2 {
     margin: 0;
     padding: 0;
