--- a/src/App.css
+++ b/src/App.css
@@ -1513,7 +1513,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 320px;
+    width: 290px;
 
     position: relative;
     z-index: 1;
@@ -1639,30 +1639,37 @@ h2 {
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
   }
   .select-body-header {
-    align-items: center;
-    align-self: center;
+    align-items: flex-start;
+    align-self: flex-start;
     text-align: center;
-    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.5rem;
     font-weight: bold;
+    padding: 0px;
   }
   .select-text {
     margin-right: 5px;
   }
   .summary-button {
     margin: 0;
-    margin-left: 30px;
+    margin-left: 00px;
     padding: 0;
     display: inline-block;
-    font-size: 1.2rem;
-    line-height: 44px;
-    height: 60px;
-    width: 160px;
+    justify-self: center;
+    text-align: center;
+    align-self: center;
 
+    font-size: 1.4rem;
+    line-height: 0px;
+    height: 40px;
+    width: 150px;
     border: none;
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
-
+    margin-top: 20px;
     border-radius: 5px;
-    vertical-align: middle;
   }
 
   h1 {
@@ -2081,42 +2088,45 @@ h2 {
     touch-action: none;
   }
   .selection-greeting-one {
-    box-shadow: 0px -6px 12px rgba(0, 0, 0, 0.5);
     position: fixed;
-    left: 0;
-    bottom: 0;
+
     right: 0;
-    height: 130px;
-    padding-left: 20px;
-    padding-right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 70%;
+    height: 200px !important;
+    width: 230px;
+    padding: 10px;
 
     display: flex;
     align-items: flex-start;
+
     text-align: center;
+    border-radius: 2px;
+    box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.5);
     z-index: 1000;
     user-select: none;
-    opacity: 0.95;
-    overscroll-behavior: contain;
+    touch-action: none;
   }
   .selection-greeting {
-    box-shadow: 0px -6px 12px rgba(0, 0, 0, 0.5);
     position: fixed;
-    left: 0;
-    bottom: 0;
     right: 0;
-    height: 180px;
-    padding: 0;
-    padding-left: 20px;
-    padding-right: 20px;
+    left: 70%;
+    top: 50%;
+    transform: translateY(-50%);
+
+    height: 250px;
+    width: 400px;
+    padding: 10px;
 
     display: flex;
-    align-items: flex-start;
-
+    align-items: center;
     text-align: center;
+    border-radius: 2px;
+    box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.5);
     z-index: 1000;
     user-select: none;
-    overflow-y: auto;
-    overscroll-behavior: contain;
+    touch-action: none;
   }
 
   .list-button-container {
@@ -2463,7 +2473,7 @@ h2 {
   .modal-overlay-summary {
     position: fixed;
     top: 0px;
-    left: 500px;
+    left: 350px;
     width: 100%;
     max-width: 420px;
 
@@ -2642,7 +2652,7 @@ h2 {
   }
 
   .cartlag-doll {
-    width: 450px;
+    width: 320px;
 
     position: relative;
     z-index: 1;
@@ -2758,6 +2768,8 @@ h2 {
     box-shadow: 0 6px 6px hsl(0deg 0% 0% / 0.3);
   }
   .select-body-header {
+    display: inline-block;
+
     align-items: center;
     align-self: center;
     text-align: center;
@@ -2769,11 +2781,11 @@ h2 {
   }
   .summary-button {
     margin: 0;
-    margin-left: 30px;
+    margin-left: 0px;
     padding: 0;
     display: inline-block;
     font-size: 1.2rem;
-    line-height: 44px;
+    line-height: 0px;
     height: 60px;
     width: 160px;
 
