--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "@fontsource/jost/index.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
@@ -6,14 +9,12 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+
   background: linear-gradient(
     to bottom,
 
-    #232121 0%,
     #232121 100%
   );
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
